SONAR-2046: Reuse unmarshallers from sonar-ws-client for sonar-gwt-api
* WSUtils has two implementations - one for GWT and another for Java,
  so can be used by unmarshallers in both cases. But this not very good,
  because code is not type-safe. In fact it would be better to use
  emulation of types from org.json.simple for GWT, but this solution is
  more straightforward.